Imagenes para mejorar

--- a/css/layout.css
+++ b/css/layout.css
@@ -23,7 +23,7 @@ a:hover{
     color: #cdcdcd;
 }
 
-@media only screen and (min-width: 1000px){
+@media only screen and (min-width: 1024px){
     .header{
         flex-direction: row-reverse;
     }
@@ -45,7 +45,6 @@ a:hover{
 
 .banner{
     width: 100vw;
-    background-color: rgb(133, 83, 83);
 }
 
 main{
@@ -58,11 +57,65 @@ main{
 main h1{
     color: #5e5e5e;
     font-size: 28px;
-    padding-top: 60px;
+    padding-top: 15px;
 }
 
 .texto{
     width: 65vw;
     text-align: center;
+    color:#5e5e5e;
+    line-height: 23px;
+}
+
+.titulo.login{
+    padding-top: 90px;
+}
+
+.input{
+    width: 250px;
+    height: 40px;
+    border-radius: 5px;
+    border: 2px solid black;
+    padding: 15px;
+}
+
+.submit{
+    width: 100px;
+    height: 36px;
+    border-radius: 5px;
+    border: 0.3px;
+    color: white;
+    background-color: #385876;
+}
+
+.contenedor_login{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 150px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contenedor_registro{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 325px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.link{
+    color:#414FD0;
+}
+
+@media only screen and (min-width: 768px){
+    .input{
+        width: 420px;
+    }
+}
+
+.contacto{
     color:#5e5e5e;
 }
