Tamaño links ampliado

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -23,7 +23,7 @@
         justify-content: space-between;
         flex-direction: column;
         padding: 0px;
-        font-size: 20px;
+        font-size: 26px;
     }
 }
 
@@ -60,4 +60,9 @@
     .input{
         width: 420px;
     }
+}
+
+@media only screen and (min-width: 768px), screen and (max-width: 1023px)
+{
+    
 }
