--- a/css/layout.css
+++ b/css/layout.css
@@ -36,6 +36,7 @@ main{
 main h1{
     font-size: 28px;
     padding-top: 15px;
+    font-family: 'sans-serif-bold';
 }
 
 .texto{
@@ -79,4 +80,8 @@ main h1{
     height: 380px;
     align-items: center;
     justify-content: space-between;
+}
+
+label{
+    cursor: pointer;
 }
