--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -60,6 +60,10 @@
     .input{
         width: 420px;
     }
+
+    .contenedor_registro{
+        width: 420px;
+    }
 }
 
 @media only screen and (min-width: 768px), screen and (max-width: 1023px)
